<resources>
    <string name="app_name">AndroidApp</string>
    <string name="passtime">通关时间：0</string>
    <string name="appName">星梦缘</string>
    <string name="label_constellation">星座</string>
    <string name="label_match">配对</string>
    <string name="label_luck">运势</string>
    <string name="label_me">我</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_star_analysis">StarAnalysisActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="questions">反馈问题</string>
    <string name="updlog">更新日志</string>
    <string name="function">功能介绍</string>
    <string name="Application">关于应用</string>
    <string name="Aris">白羊座</string>
    <string name="constellationInstruction">星座解析</string>
    <string name="Date">3月21日--4月19日</string>
    <string name="nature">性格特点 :</string>
    <string name="humou">幽默大方</string>
    <string name="aris">白羊座</string>
</resources>