<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_tv_title"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/appName"
        android:textSize="20sp"
        android:background="@color/lightyellow"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/lightred"/>

    <RadioGroup
        android:id="@+id/main_rg"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:orientation="horizontal"
        android:background="@color/lightyellow"
        android:layout_alignParentBottom="true"
        android:padding="5sp">
        <RadioButton
            android:id="@+id/main_rb_star"
            style="@style/main_rb"
            android:checked="true"
            android:textColor="@drawable/main_rb_txt"
            android:text = "@string/label_constellation"
            android:drawableTop="@drawable/main_rb_star"/>
        <RadioButton
            android:id="@+id/main_rb_match"
            style="@style/main_rb"
            android:checked="false"
            android:text = "@string/label_match"
            android:drawableTop="@drawable/main_rb_star"/>
        <RadioButton
            android:id="@+id/main_rb_luck"
            style="@style/main_rb"
            android:checked="false"
            android:text = "@string/label_luck"
            android:drawableTop="@drawable/main_rb_star"/>
        <RadioButton
            android:id="@+id/main_rb_me"
            style="@style/main_rb"
            android:checked="false"
            android:text = "@string/label_me"
            android:drawableTop="@drawable/main_rb_star"/>
    </RadioGroup>
<!--    中间部分使用布局进行占位，会去使用Fragment替换这块布局-->
    <LinearLayout
        android:id="@+id/main_layout_center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/main_tv_title"
        android:layout_above="@+id/main_rg"/>
</RelativeLayout>